# Finite-Automata-Project

./: Cargo.toml  Comment.dfa  Exc2-3.dfa  Ill-formed.dfa  README.md
src/: dfa.rs  int_nfa_reg.rs  main.rs  nfa.rs  regex.rs
test-files/: Comment.dfa  Comment.nfa  Comment2.dfa  Endab.nfa  Exc1b.nfa  Exc2a.dfa  Exc2a.nfa  endab.nfa  endab2.dfa
