[package]
name = "Finite_Automata_Project"
description = "Program that reads a given DFA, NFA or regex, and checks if a given word is accepted or rejected, or produce equivalent DFA, NFA, or regex."
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
